--- a/index.html
+++ b/index.html
@@ -10,6 +10,81 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="/images/logo.png" alt="Website Logo - Watering Can">
+            </div>
+                <div class="links">
+                    <a href="#top">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#shop">Plants</a>
+                    <a href="#contact">Contact</a>
+            </div>
+        </nav>
+    </header>
+    <section class="top">
+        <div class="titles">
+            <h1>The Watering Can</h1>
+            <button>Shop Our Indoor Plant Sale</button>
+        </div>
+    </section>
+    <section id="about">
+        <div>
+            <h2>Our Story</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam ex vero neque nobis sit sequi cum. Adipisci blanditiis perspiciatis molestiae ab in culpadolorem         molestias rem iure, enim reiciendis et.Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ab laborum, repellat, est quam molestiae, ea rerum alias suscipit impedit porro distinctio minus incidunt aperiam? Necessitatibus tenetur inventore ratione temporibus.
+            </p>
+        </div>
+    </section>
+    <section id="shop">
+        <h2>Our Plants</h2>
+        <div class="container">
+            <div class="bg-img succulants"></div>
+            <div class="text">
+                <div>
+                    <h3>Succulants</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum possimus, in hic velit nemo id mollitia, deserunt, incidunt repudiandae alias recusandae nisi ea laudantium eligendi non dolor? Aut, odio ad. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta doloribus excepturi sunt fuga magni est corporis aspernatur unde, incidunt labore, dignissimos cumque quae officia explicabo modi? Magni nulla voluptatum mollitia.</p>
+                    <button>Shop Now!</button>
+                    </div>
+            </div>
+        </div>
+            <div class="text">
+                <div>
+                    <h3>Cacti</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum possimus, in hic velit nemo id mollitia, deserunt, incidunt repudiandae alias recusandae nisi ea laudantium eligendi non dolor? Aut, odio ad. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta doloribus excepturi sunt fuga magni est corporis aspernatur unde, incidunt labore, dignissimos cumque quae officia explicabo modi? Magni nulla voluptatum mollitia.</p>
+                    <button>Shop Now!</button>
+                    </div>
+            </div>
+            <div class="bg-img Cacti"></div>
+            <div class="bg-img tropicals"></div>
+            <div class="text">
+                <div>
+                <h3>Tropicals</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum possimus, in hic velit nemo id mollitia, deserunt, incidunt repudiandae alias recusandae nisi ea laudantium eligendi non dolor? Aut, odio ad. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta doloribus excepturi sunt fuga magni est corporis aspernatur unde, incidunt labore, dignissimos cumque quae officia explicabo modi? Magni nulla voluptatum mollitia.</p>
+                <button>Shop Now!</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer id="contact">
+        <h2>Get In Touch!</h2>
+        <div class="left">
+            <div class="info">
+                <h3>Find Us Here:</h3>
+                <address>123 Plant Lane <br>
+                        Bloomfield Ontario <br>
+                        Canada L2G 0x7
+                </address>
+                <a href="tel:+1-613-978-8272">+1-613-978-8272</a>
+                <a href="mailto:info@thewateringcan.ca">info@thewateringcan.ca</a>
+            </div>
+        </div>
+        <div class="right">
+            <img src="/images/shop.jpg" alt="front room of the watering can shop">
+        </div>
+        <div class="bottom">
+           <p> &copy Marcel-Rodriguez 2021</p>
+        </div>
+    </footer>
 </body>
 </html>
