Added a ptag for socials in footer class of right

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 </address>
                 <a href="tel:+1-613-978-8272">+1-613-978-8272</a>
                 <a href="mailto:info@thewateringcan.ca">info@thewateringcan.ca</a>
+                <p>@thewateringcan on the socials</p>
             </div>
         </div>
         <div class="right">
